--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -3,7 +3,7 @@ server {
   access_log /var/log/nginx/your_host_fqdn_access.log combined;
 
   location / {
-    root /your_project_local_path;
+    root /var/www/webroot;
     index index.php index.html index.htm;
   }
   location ~ \.php(?:$|/) {
