--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,6 @@ nginx:
     - php:php
   volumes:
     - /your_project_local_path:/var/www/webroot
+    - /your_log_local_path:/var/log
   ports:
     - "80:80"
