root の指定がイマイチだった

--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -1,9 +1,9 @@
 server {
-  server_name your_host_fqdn;
-  access_log /var/log/nginx/your_host_fqdn_access.log combined;
+  server_name localhost;
+  access_log /var/log/nginx/localhost_access.log combined;
+  root /var/www/webroot;
 
   location / {
-    root /var/www/webroot;
     index index.php index.html index.htm;
   }
   location ~ \.php(?:$|/) {
