--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -5,6 +5,7 @@ server {
 
   location / {
     index index.php index.html index.htm;
+    try_files $uri $uri/ /index.php$is_args$args;
   }
   location ~ \.php(?:$|/) {
     fastcgi_pass php:9000;
