--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ TZ=Asia/Tokyo
 #Project
 PROJECT_DIR=./htdocs
 LOG_DIR=./log
+
+# XDebug
+# デバッグを有効にするには以下のように書いてdocker-compose upします
+# XDEBUG_MODE=debug
