--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - ${PROJECT_DIR}:/var/www/${WEB_ROOT}
     environment:
       TZ: ${TZ}
+      XDEBUG_MODE: ${XDEBUG_MODE:-off}
 
   mysql:
     image: mysql:8.0
